--- a/client/src/index.css
+++ b/client/src/index.css
@@ -59,3 +59,17 @@ a:visited{
   display: flex;
   justify-content: flex-start;
 }
+
+.product-info-container {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid black;
+  border-radius: 15px;
+  padding: 40px;
+}
+
+.product-image {
+  width: 200px;
+  height: 200px;
+  border-radius: 15px;
+}
